--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Recipe Manager</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="recipie/styles.css">
 </head>
 <body>
   <div class="container">
@@ -45,6 +45,6 @@
     <ul id="recipies"></ul>
   </div>
 
-  <script src="script.js"></script>
+  <script src="recipie/script.js"></script>
 </body>
 </html>
